@@ -8,10 +8,10 @@ y = Pima.te[, 8]
 set_bart_machine_num_cores(4)
 set_bart_machine_memory(2500)
 
-bart_machine_cv = build_bart_machine_cv(X, y)
+bart_machine_cv = bartMachineCV(X, y)
 bart_machine_cv
 
-bart_machine = build_bart_machine(X, y, prob_rule_class = 0.3)
+bart_machine = bartMachine(X, y, prob_rule_class = 0.3)
 bart_machine
 
 oos_stats = k_fold_cv(X, y, k_folds = 10)
